# starryos-pulsar

./: .build.toml  .gitignore  404.html  Cargo.toml  README.md  RKNPU技术报告.md  book.toml  index.html  iwantsay.html  log.txt  print.html  searchindex.js  searchindex.json  决赛-技术报告.md  初赛-文档.md
StarryOS/arceos/api/axklib/: Cargo.toml
StarryOS/arceos/api/axklib/src/: lib.rs
StarryOS/arceos/modules/axklib-impl/: Cargo.toml
StarryOS/arceos/modules/axklib-impl/src/: lib.rs
StarryOS/crates/axdriver-dyn/: Cargo.toml
StarryOS/crates/axdriver-dyn/src/: lib.rs
StarryOS/crates/axdriver-dyn/src/blk/: rockchip.rs
StarryOS/crates/axdriver-dyn/src/rknpu/: mod.rs
arceos/modules/axfs/: Cargo.toml
arceos/modules/axfs/src/: lib.rs
arceos/modules/axfs/src/fs/: mod.rs
arceos/modules/axfs/src/fs/fat/: dir.rs
arceos/modules/axfs/src/fs/rs_ext4/: fs.rs  inode.rs  mod.rs  util.rs
arceos/modules/axfs/src/highlevel/: file.rs
arceos/modules/axfs/tests/: test_fs.rs
demo/npu_llama/: meson.build
demo/npu_llama/include/: rknpu-ioctl.h
demo/npu_llama/libdrm-arm64/usr/include/libdrm/: tegra.h
demo/npu_llama/tests/: llama0.c  llama1.c
drivers/rk3588-clk/: Cargo.toml  Makefile
drivers/rk3588-clk/src/: constant.rs  lib.rs  tools.rs
drivers/rk3588-clk/tests/: test.rs
drivers/rknpu/: .gitignore  Cargo.toml  README.md
drivers/rknpu/src/: err.rs  gem.rs  ioctrl.rs  irq.rs  job.rs  lib.rs  npuprobe.rs  osal.rs  power.rs  tool.rs
drivers/rknpu/src/config/: mod.rs
drivers/rknpu/src/data/: mod.rs
drivers/rknpu/src/registers/: mod.rs
drivers/rknpu/src/service/: error.rs  ioctl.rs  mod.rs  platform.rs  scheduler.rs  tests.rs
drivers/rknpu/src/status/: mod.rs  status.rs
drivers/rknpu/src/task/: cna.rs  def.rs  dpu.rs  mod.rs  npu_context.rs  taskqueen.rs
drivers/rknpu/src/task/op/: matmul.rs  mod.rs
drivers/rockchip-pm/: Cargo.toml  README.md
drivers/rockchip-pm/src/: lib.rs
drivers/rockchip-pm/src/registers/: mod.rs
drivers/rockchip-pm/src/variants/: _macros.rs  mod.rs  rk3588.rs
drivers/sdmmc/: .bare-test.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bare-test.toml  rust-toolchain.toml
drivers/sdmmc/.cargo/: config.toml
drivers/sdmmc/docs/: SDMMC开发.md
drivers/sdmmc/firmware/: qemu.dtb  qemu.dts  rk3568.dts  rk3568.dts.bak
drivers/sdmmc/src/: err.rs  lib.rs
drivers/sdmmc/src/emmc/: aux.rs  block.rs  clock.rs  cmd.rs  config.rs  constant.rs  info.rs  mod.rs  regs.rs  rockchip.rs
drivers/sdmmc/tests/: test.rs
drivers/some-serial/: .gitignore  CHANGELOG.md  Cargo.toml  bare-test.toml
drivers/some-serial/src/: lib.rs  pl011.rs
drivers/some-serial/src/ns16550/: mmio.rs  mod.rs  pio.rs  registers.rs
drivers/some-serial/tests/: test.rs
ostool/: .gitignore  Cargo.toml  LICENSE  README.md
ostool/.github/workflows/: ci.yml
ostool/fitimage/: Cargo.toml  README.md
ostool/fitimage/src/: crc.rs  error.rs  hash.rs  lib.rs
ostool/fitimage/src/compression/: gzip.rs  mod.rs  traits.rs
ostool/fitimage/src/fit/: builder.rs  config.rs  fdt_header.rs  fdt_tokens.rs  mod.rs  standard_dt_builder.rs  string_table.rs
ostool/fitimage/tests/: dtb.txt  kernel.txt  ramfs.txt  test.its  test.rs  test_compatibility_formats.rs  test_fixed_config.rs
ostool/jkconfig/: Cargo.toml  README.md
ostool/jkconfig/src/: lib.rs  main.rs
ostool/jkconfig/src/data/: app_data.rs  item.rs  menu.rs  mod.rs  oneof.rs  schema.rs  types.rs
ostool/jkconfig/src/ui/: mod.rs
ostool/jkconfig/src/ui/components/: icon.rs  menu.rs  mod.rs
ostool/jkconfig/src/ui/components/editors/: array_editor.rs  enum_editor.rs  integer_editor.rs  mod.rs  number_editor.rs  oneof_editor.rs  string_editor.rs
ostool/jkconfig/src/web/: handlers.rs  mod.rs  routes.rs  server.rs
ostool/jkconfig/tests/: schema-obj.rs  schema.rs
ostool/jkconfig/web/static/: app.js  index.html  style.css
ostool/ostool/: Cargo.toml
ostool/ostool/src/: ctx.rs  lib.rs  main.rs  utils.rs
ostool/ostool/src/run/: cargo.rs  mod.rs  qemu.rs  tftp.rs  uboot.rs
ostool/ostool/src/run/ovmf_prebuilt/: fetch.rs
ostool/ostool/src/sterm/: mod.rs
ostool/uboot-shell/: Cargo.toml  README.md
ostool/uboot-shell/examples/: env_var.rs  loady.rs  loady_real.rs
ostool/uboot-shell/src/: crc.rs  lib.rs  ymodem.rs
ostool/uboot-shell/tests/: test.rs
rdrive/: .gitignore  Cargo.toml  README.md  release-plz.toml  test_pcie.sh
rdrive/.github/workflows/: release-plz.yml  test.yml
rdrive/bus/pcie/: CHANGELOG.md  Cargo.toml  README.md
rdrive/bus/pcie/src/: lib.rs  root.rs
rdrive/bus/pcie/src/chip/: mod.rs
rdrive/bus/pcie/src/types/: mod.rs
rdrive/bus/pcie/src/types/config/: mod.rs  (+1 more)
rdrive/bus/pcie/tests/: test.rs
rdrive/examples/enumerate/: Cargo.toml
rdrive/examples/enumerate/src/: blk.rs  intc.rs  main.rs
rdrive/interface/rdif-base/: Cargo.toml
rdrive/interface/rdif-base/src/: _macros.rs  io.rs  lib.rs
rdrive/interface/rdif-block/: Cargo.toml
rdrive/interface/rdif-block/examples/: ramdisk.rs
rdrive/interface/rdif-block/src/: blk.rs  lib.rs
rdrive/interface/rdif-clk/: Cargo.toml
rdrive/interface/rdif-def/: Cargo.toml
rdrive/interface/rdif-def/src/: _macro.rs
rdrive/interface/rdif-intc/: Cargo.toml
rdrive/interface/rdif-intc/src/: lib.rs
rdrive/interface/rdif-net/: CHANGELOG.md  Cargo.toml
rdrive/interface/rdif-net/src/: lib.rs
rdrive/interface/rdif-pcie/: CHANGELOG.md  Cargo.toml
rdrive/interface/rdif-pcie/src/: lib.rs
rdrive/interface/rdif-pcie/src/addr_alloc/: address_allocator.rs  id_allocator.rs  mod.rs
rdrive/interface/rdif-power/: Cargo.toml
rdrive/interface/rdif-serial/: Cargo.toml
rdrive/interface/rdif-serial/src/: lib.rs  serial.rs
rdrive/interface/rdif-systick/: Cargo.toml
rdrive/interface/rdif-timer/: Cargo.toml
rdrive/rdrive/: CHANGELOG.md  Cargo.toml
rdrive/rdrive-macros/: Cargo.toml
rdrive/rdrive/src/: descriptor.rs  error.rs  lib.rs  lock.rs  manager.rs
rdrive/rdrive/src/driver/: mod.rs
rdrive/rdrive/src/probe/: mod.rs
rdrive/rdrive/src/probe/fdt/: mod.rs
rdrive/rdrive/src/probe/pci/: mod.rs
rdrive/rdrive/src/register/: mod.rs
(+486 files in other folders)
