[workspace]
exclude = ["assets/*", "fit_test"]
members = ["ostool", "uboot-shell", "jkconfig", "fitimage"]
resolver = "3"

[workspace.dependencies]
# Cursive TUI framework
cursive = {version = "0.21", features = ["crossterm-backend"]}
crossterm = "0.29"

# Data processing
anyhow = "1"
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

toml = "0.9"

# Error handling
thiserror = "2"

# Logging
log = "0.4"

schemars = {version = "1.0.4", features = ["derive"]}

env_logger = "0.11"

tokio = {version = "1", features = ["full"]}