[workspace]
members = [
  "interface/*",
  "bus/*",
  "rdrive-macros",
  "rdrive",
  "examples/enumerate",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/drivercraft/rdrive"

[workspace.dependencies]
log = "0.4"
rdif-base = {version = "0.7", path = "interface/rdif-base"}
rdif-pcie = {version = "0.1", path = "interface/rdif-pcie"}
