[package]
edition = "2024"
name = "rknpu"
version = "0.1.0"

[features]
default = []
starryos = [
    "dep:rdrive",
    "dep:rockchip-pm",
    "dep:rk3588-clk",
    "dep:axklib",
    "dep:axtask",
]

[dependencies]
aarch64-cpu-ext = "0.1"
dma-api = {version = "0.5.2", features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
num-align = "0.1"
rdif-base = {version = "0.7"}
spin = "0.10"
thiserror = {version = "2.0", default-features = false}
bitflags = "2"
rknpu-regs = {path = "../rknpu-regs"}
rdrive = {version = "0.18", optional = true}
rockchip-pm = {git = "https://github.com/drivercraft/rockchip-pm.git", optional = true}
rk3588-clk = {git = "https://github.com/drivercraft/rk3588-clk", optional = true}
axklib = {git = "https://github.com/arceos-hypervisor/arceos", branch = "hypervisor", optional = true}
axtask = {path = "../../StarryOS/arceos/modules/axtask", optional = true}



[dev-dependencies]
arm-scmi = {git = "https://github.com/drivercraft/arm-scmi"}
bare-test = "0.7"
rk3588-clk = {git = "https://github.com/drivercraft/rk3588-clk"}
rockchip-pm = {git = "https://github.com/drivercraft/rockchip-pm"}

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
