[package]
edition = "2024"
name = "rknpu"
version = "0.1.0"

[features]
default = []

[dependencies]
aarch64-cpu-ext = "0.1"
dma-api = {version = "0.5.2", features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
num-align = "0.1"
rdif-base = {version = "0.7"}
spin = "0.10"
thiserror = {version = "2.0", default-features = false}
bitflags = "2"
rknpu-regs = {path = "../rknpu-regs"}




[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
