[package]
name = "axfs"
version.workspace = true
edition.workspace = true
authors = ["Mivik <mivikq@gmail.com>"]
description = "ArceOS filesystem module"
license.workspace = true
homepage.workspace = true

[features]
default = []
use-ramdisk = []           # TODO: init ramdisk
fat = ["dep:fatfs"]
ext4 = ["dep:lwext4_rust"]
rsext4 = ["dep:rsext4"]
times = []
std = ["lwext4_rust?/std"]

[dependencies]
rsext4 = { git = "https://github.com/Dirinkbottle/rsext4.git", optional = true }
axalloc = { workspace = true }
axdriver = { workspace = true, features = ["block"] }
axerrno = { workspace = true }
axfs-ng-vfs = { workspace = true }
axhal = { workspace = true }
axio = { workspace = true, features = ["alloc"] }
axpoll = { workspace = true }
axsync = { workspace = true }
bitflags = "2.10"
cfg-if = { workspace = true }
chrono = { workspace = true }
intrusive-collections = "0.9.7"
kspin = { workspace = true }
log = { workspace = true }
lru = "0.16.0"
scope-local = { workspace = true }
slab = { version = "0.4.9", default-features = false }
spin = { workspace = true }

[dependencies.lwext4_rust]
git = "https://github.com/Starry-OS/lwext4_rust.git"
rev = "033fa2c"
default-features = false
optional = true

[dependencies.fatfs]
git = "https://github.com/Starry-OS/rust-fatfs.git"
rev = "2685439"
default-features = false
optional = true
features = ["alloc", "lfn", "log_level_trace", "unicode"]

[dev-dependencies]
axdriver = { workspace = true, features = ["block", "ramdisk"] }
env_logger = "0.11.8"
