[package]
name = "rdif-serial"
version = "0.5.4"
edition.workspace = true
repository.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
license = "MIT"
description = "Driver Interface base definition."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
spin = "0.10"
thiserror = { version = "2", default-features = false }
bitflags = "2.8"
mbarrier = "0.1"
