[package]
name = "rdif-timer"
version = "0.5.0"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
license = "MIT"
description = "Driver Interface of system timer."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { workspace = true }
