[package]
name = "axklib"
version.workspace = true
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
irq = []

[dependencies]
trait-ffi = "0.2"
memory_addr = "0.4"
axerrno = "0.1"
