[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "axklib-impl"
repository.workspace = true
version.workspace = true

[features]
irq = ["axklib/irq", "axhal/irq"]

[dependencies]
axhal = {workspace = true}
axklib = {path = "../../api/axklib"}
axmm = {workspace = true}
trait-ffi = "0.2"
